--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "better-comments.tags": [
         
-        {   // !       ERROR MASSAGE      ! //
+        {   // !       ERROR MESSAGE      ! //
             "tag": "!", 
             "color": "#FF2D00",
             "strikethrough": false,
